src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> content
Rule 1     content -> dayinfo
Rule 2     content -> defaultproject
Rule 3     dayinfo -> DAY EOL projectsdata
Rule 4     projectsdata -> projectsdata changeprojectinfo projectdata
Rule 5     changeprojectinfo -> PROJECT PROJECTNAME EOL
Rule 6     projectsdata -> projectdata
Rule 7     projectdata -> intervals activities
Rule 8     projectdata -> partialintervals activities
Rule 9     defaultproject -> DEFAULTPROJECT PROJECTNAME EOL
Rule 10    intervals -> intervals interval
Rule 11    intervals -> interval
Rule 12    interval -> TIME TIME EOL
Rule 13    partialintervals -> intervals semiinterval
Rule 14    partialintervals -> semiinterval
Rule 15    semiinterval -> TIME EOL
Rule 16    activities -> activity
Rule 17    activities -> activities activity
Rule 18    activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
Rule 19    taskidentifier -> NUMBERSIGN NUMBER
Rule 20    taskidentifier -> NA

Terminals, with rules where they appear

ACTIVITY             : 18
DAY                  : 3
DEFAULTPROJECT       : 9
EOL                  : 3 5 9 12 15 18
LPARENTHESIS         : 18
NA                   : 20
NUMBER               : 19
NUMBERSIGN           : 19
PROJECT              : 5
PROJECTNAME          : 5 9
RPARENTHESIS         : 18
SEPARATOR            : 18
TIME                 : 12 12 15
TITLE                : 18
error                : 

Nonterminals, with rules where they appear

activities           : 7 8 17
activity             : 16 17
changeprojectinfo    : 4
content              : 0
dayinfo              : 1
defaultproject       : 2
interval             : 10 11
intervals            : 7 10 13
partialintervals     : 8
projectdata          : 4 6
projectsdata         : 3 4
semiinterval         : 13 14
taskidentifier       : 18

Parsing method: LALR

state 0

    (0) S' -> . content
    (1) content -> . dayinfo
    (2) content -> . defaultproject
    (3) dayinfo -> . DAY EOL projectsdata
    (9) defaultproject -> . DEFAULTPROJECT PROJECTNAME EOL

    DAY             shift and go to state 5
    DEFAULTPROJECT  shift and go to state 2

    content                        shift and go to state 4
    dayinfo                        shift and go to state 1
    defaultproject                 shift and go to state 3

state 1

    (1) content -> dayinfo .

    $end            reduce using rule 1 (content -> dayinfo .)


state 2

    (9) defaultproject -> DEFAULTPROJECT . PROJECTNAME EOL

    PROJECTNAME     shift and go to state 6


state 3

    (2) content -> defaultproject .

    $end            reduce using rule 2 (content -> defaultproject .)


state 4

    (0) S' -> content .



state 5

    (3) dayinfo -> DAY . EOL projectsdata

    EOL             shift and go to state 7


state 6

    (9) defaultproject -> DEFAULTPROJECT PROJECTNAME . EOL

    EOL             shift and go to state 8


state 7

    (3) dayinfo -> DAY EOL . projectsdata
    (4) projectsdata -> . projectsdata changeprojectinfo projectdata
    (6) projectsdata -> . projectdata
    (7) projectdata -> . intervals activities
    (8) projectdata -> . partialintervals activities
    (10) intervals -> . intervals interval
    (11) intervals -> . interval
    (13) partialintervals -> . intervals semiinterval
    (14) partialintervals -> . semiinterval
    (12) interval -> . TIME TIME EOL
    (15) semiinterval -> . TIME EOL

    TIME            shift and go to state 9

    projectsdata                   shift and go to state 10
    interval                       shift and go to state 11
    semiinterval                   shift and go to state 12
    intervals                      shift and go to state 13
    partialintervals               shift and go to state 14
    projectdata                    shift and go to state 15

state 8

    (9) defaultproject -> DEFAULTPROJECT PROJECTNAME EOL .

    $end            reduce using rule 9 (defaultproject -> DEFAULTPROJECT PROJECTNAME EOL .)


state 9

    (12) interval -> TIME . TIME EOL
    (15) semiinterval -> TIME . EOL

    TIME            shift and go to state 17
    EOL             shift and go to state 16


state 10

    (3) dayinfo -> DAY EOL projectsdata .
    (4) projectsdata -> projectsdata . changeprojectinfo projectdata
    (5) changeprojectinfo -> . PROJECT PROJECTNAME EOL

    $end            reduce using rule 3 (dayinfo -> DAY EOL projectsdata .)
    PROJECT         shift and go to state 19

    changeprojectinfo              shift and go to state 18

state 11

    (11) intervals -> interval .

    TIME            reduce using rule 11 (intervals -> interval .)
    NUMBERSIGN      reduce using rule 11 (intervals -> interval .)
    NA              reduce using rule 11 (intervals -> interval .)


state 12

    (14) partialintervals -> semiinterval .

    NUMBERSIGN      reduce using rule 14 (partialintervals -> semiinterval .)
    NA              reduce using rule 14 (partialintervals -> semiinterval .)


state 13

    (7) projectdata -> intervals . activities
    (10) intervals -> intervals . interval
    (13) partialintervals -> intervals . semiinterval
    (16) activities -> . activity
    (17) activities -> . activities activity
    (12) interval -> . TIME TIME EOL
    (15) semiinterval -> . TIME EOL
    (18) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (19) taskidentifier -> . NUMBERSIGN NUMBER
    (20) taskidentifier -> . NA

    TIME            shift and go to state 9
    NUMBERSIGN      shift and go to state 23
    NA              shift and go to state 22

    activities                     shift and go to state 20
    interval                       shift and go to state 21
    semiinterval                   shift and go to state 24
    taskidentifier                 shift and go to state 25
    activity                       shift and go to state 26

state 14

    (8) projectdata -> partialintervals . activities
    (16) activities -> . activity
    (17) activities -> . activities activity
    (18) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (19) taskidentifier -> . NUMBERSIGN NUMBER
    (20) taskidentifier -> . NA

    NUMBERSIGN      shift and go to state 23
    NA              shift and go to state 22

    activities                     shift and go to state 27
    activity                       shift and go to state 26
    taskidentifier                 shift and go to state 25

state 15

    (6) projectsdata -> projectdata .

    PROJECT         reduce using rule 6 (projectsdata -> projectdata .)
    $end            reduce using rule 6 (projectsdata -> projectdata .)


state 16

    (15) semiinterval -> TIME EOL .

    NUMBERSIGN      reduce using rule 15 (semiinterval -> TIME EOL .)
    NA              reduce using rule 15 (semiinterval -> TIME EOL .)


state 17

    (12) interval -> TIME TIME . EOL

    EOL             shift and go to state 28


state 18

    (4) projectsdata -> projectsdata changeprojectinfo . projectdata
    (7) projectdata -> . intervals activities
    (8) projectdata -> . partialintervals activities
    (10) intervals -> . intervals interval
    (11) intervals -> . interval
    (13) partialintervals -> . intervals semiinterval
    (14) partialintervals -> . semiinterval
    (12) interval -> . TIME TIME EOL
    (15) semiinterval -> . TIME EOL

    TIME            shift and go to state 9

    interval                       shift and go to state 11
    semiinterval                   shift and go to state 12
    intervals                      shift and go to state 13
    partialintervals               shift and go to state 14
    projectdata                    shift and go to state 29

state 19

    (5) changeprojectinfo -> PROJECT . PROJECTNAME EOL

    PROJECTNAME     shift and go to state 30


state 20

    (7) projectdata -> intervals activities .
    (17) activities -> activities . activity
    (18) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (19) taskidentifier -> . NUMBERSIGN NUMBER
    (20) taskidentifier -> . NA

    PROJECT         reduce using rule 7 (projectdata -> intervals activities .)
    $end            reduce using rule 7 (projectdata -> intervals activities .)
    NUMBERSIGN      shift and go to state 23
    NA              shift and go to state 22

    taskidentifier                 shift and go to state 25
    activity                       shift and go to state 31

state 21

    (10) intervals -> intervals interval .

    TIME            reduce using rule 10 (intervals -> intervals interval .)
    NUMBERSIGN      reduce using rule 10 (intervals -> intervals interval .)
    NA              reduce using rule 10 (intervals -> intervals interval .)


state 22

    (20) taskidentifier -> NA .

    LPARENTHESIS    reduce using rule 20 (taskidentifier -> NA .)


state 23

    (19) taskidentifier -> NUMBERSIGN . NUMBER

    NUMBER          shift and go to state 32


state 24

    (13) partialintervals -> intervals semiinterval .

    NUMBERSIGN      reduce using rule 13 (partialintervals -> intervals semiinterval .)
    NA              reduce using rule 13 (partialintervals -> intervals semiinterval .)


state 25

    (18) activity -> taskidentifier . LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL

    LPARENTHESIS    shift and go to state 33


state 26

    (16) activities -> activity .

    NUMBERSIGN      reduce using rule 16 (activities -> activity .)
    NA              reduce using rule 16 (activities -> activity .)
    PROJECT         reduce using rule 16 (activities -> activity .)
    $end            reduce using rule 16 (activities -> activity .)


state 27

    (8) projectdata -> partialintervals activities .
    (17) activities -> activities . activity
    (18) activity -> . taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL
    (19) taskidentifier -> . NUMBERSIGN NUMBER
    (20) taskidentifier -> . NA

    PROJECT         reduce using rule 8 (projectdata -> partialintervals activities .)
    $end            reduce using rule 8 (projectdata -> partialintervals activities .)
    NUMBERSIGN      shift and go to state 23
    NA              shift and go to state 22

    activity                       shift and go to state 31
    taskidentifier                 shift and go to state 25

state 28

    (12) interval -> TIME TIME EOL .

    TIME            reduce using rule 12 (interval -> TIME TIME EOL .)
    NUMBERSIGN      reduce using rule 12 (interval -> TIME TIME EOL .)
    NA              reduce using rule 12 (interval -> TIME TIME EOL .)


state 29

    (4) projectsdata -> projectsdata changeprojectinfo projectdata .

    PROJECT         reduce using rule 4 (projectsdata -> projectsdata changeprojectinfo projectdata .)
    $end            reduce using rule 4 (projectsdata -> projectsdata changeprojectinfo projectdata .)


state 30

    (5) changeprojectinfo -> PROJECT PROJECTNAME . EOL

    EOL             shift and go to state 34


state 31

    (17) activities -> activities activity .

    NUMBERSIGN      reduce using rule 17 (activities -> activities activity .)
    NA              reduce using rule 17 (activities -> activities activity .)
    PROJECT         reduce using rule 17 (activities -> activities activity .)
    $end            reduce using rule 17 (activities -> activities activity .)


state 32

    (19) taskidentifier -> NUMBERSIGN NUMBER .

    LPARENTHESIS    reduce using rule 19 (taskidentifier -> NUMBERSIGN NUMBER .)


state 33

    (18) activity -> taskidentifier LPARENTHESIS . TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL

    TITLE           shift and go to state 35


state 34

    (5) changeprojectinfo -> PROJECT PROJECTNAME EOL .

    TIME            reduce using rule 5 (changeprojectinfo -> PROJECT PROJECTNAME EOL .)


state 35

    (18) activity -> taskidentifier LPARENTHESIS TITLE . RPARENTHESIS SEPARATOR ACTIVITY EOL

    RPARENTHESIS    shift and go to state 36


state 36

    (18) activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS . SEPARATOR ACTIVITY EOL

    SEPARATOR       shift and go to state 37


state 37

    (18) activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR . ACTIVITY EOL

    ACTIVITY        shift and go to state 38


state 38

    (18) activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY . EOL

    EOL             shift and go to state 39


state 39

    (18) activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .

    NUMBERSIGN      reduce using rule 18 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)
    NA              reduce using rule 18 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)
    PROJECT         reduce using rule 18 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)
    $end            reduce using rule 18 (activity -> taskidentifier LPARENTHESIS TITLE RPARENTHESIS SEPARATOR ACTIVITY EOL .)

